--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Clyde - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Aashish Portfolio</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -23,7 +23,7 @@
 	
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Clyde<span>.</span></a>
+			<a class="navbar-brand" href="index.html">Aashish<span>.</span></a>
 			<button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
@@ -53,8 +53,8 @@
 						</div>
 						<div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
-								<span class="subheading">Hello! This is Clyde</span>
-								<h1 class="mb-4 mt-3">Creative <span>UI/UX</span> Designer &amp; Developer</h1>
+								<span class="subheading">Hello! This is Aashish</span>
+								<h1 class="mb-4 mt-3"><span>Software Developer</span></h1>
 								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 							</div>
 						</div>
@@ -72,8 +72,7 @@
 						</div>
 						<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
-								<span class="subheading">We Design &amp; Build Brands</span>
-								<h1 class="mb-4 mt-3">Hi, I am <span>Clyde</span> This is my favorite work.</h1>
+								<h1 class="mb-4 mt-3">Hi, I am <span>Aashish</span> This is my favorite work.</h1>
 								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 							</div>
 						</div>
@@ -150,15 +149,15 @@
 							<div class="col-md-12 heading-section ftco-animate">
 								<span class="subheading">My Intro</span>
 								<h2 class="mb-4" style="font-size: 34px; text-transform: capitalize;">About Me</h2>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+								<p>A passionate software developer  who designs, creates, tests, and maintains software applications, systems, and programs.</p>
 
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Name:</span> <span>Clyde Nowitzki</span></li>
-									<li class="d-flex"><span>Date of birth:</span> <span>January 01, 1990</span></li>
-									<li class="d-flex"><span>Address:</span> <span>San Francisco CA 97987 USA</span></li>
-									<li class="d-flex"><span>Zip code:</span> <span>1000</span></li>
-									<li class="d-flex"><span>Email:</span> <span>cydenowitzki@gmail.com</span></li>
-									<li class="d-flex"><span>Phone: </span> <span>+1-2234-5678-9-0</span></li>
+									<li class="d-flex"><span>Name:</span> <span>Aashish Khatiwada</span></li>
+									<li class="d-flex"><span>Date of birth:</span> <span>January 28, 2001</span></li>
+									<li class="d-flex"><span>Address:</span> <span>Kathmandu</span></li>
+									<li class="d-flex"><span>Zip code:</span> <span>44600</span></li>
+									<li class="d-flex"><span>Email:</span> <span>aashishkhatiwada0202@gmail.com</span></li>
+									<li class="d-flex"><span>Phone: </span> <span>+9779812386593</span></li>
 								</ul>
 							</div>
 							<div class="col-md-12">
