--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
 				<div class="col-md-7 heading-section text-center ftco-animate">
 					<span class="subheading">Contact us</span>
 					<h2 class="mb-4">Have a Project?</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
 				</div>
 			</div>
 
@@ -797,7 +797,7 @@
 								<span class="fa fa-map-marker"></span>
 							</div>
 							<div class="text">
-								<p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
+								<p><span>Address:</span> Santinagar, Kathmandu</p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex">
@@ -805,7 +805,7 @@
 								<span class="fa fa-phone"></span>
 							</div>
 							<div class="text">
-								<p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
+								<p><span>Phone:</span> <a href="tel:">+9779812386593</a></p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex">
@@ -813,7 +813,7 @@
 								<span class="fa fa-paper-plane"></span>
 							</div>
 							<div class="text">
-								<p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+								<p><span>Email:</span> <a href="mailto:info@yoursite.com">aashishkhatiwada0202@gmail.com</a></p>
 							</div>
 						</div>
 						<div class="dbox w-100 d-flex">
@@ -871,8 +871,8 @@
 						<h2 class="ftco-heading-2">Have a Questions?</h2>
 						<div class="block-23 mb-3">
 							<ul>
-								<li><span class="icon fa fa-map marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+2 392 3929 210</span></a></li>
+								<li><span class="icon fa fa-map marker"></span><span class="text"> Santinagar,Kathmandu</span></li>
+								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+9779812386593</span></a></li>
 								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">info@yourdomain.com</span></a></li>
 							</ul>
 						</div>
