--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<h1 class="mb-4 mt-3">Hi, I am <span>Aashish</span></h1>
-								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#Cv.pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 							</div>
 						</div>
 					</div>
@@ -248,7 +248,7 @@
 						<h2 class="h5 font-weight-bold text-center mb-4">Java</h2>
 
 						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='92'>
+						<div class="progress mx-auto" data-value='80'>
 							<span class="progress-left">
 								<span class="progress-bar border-primary"></span>
 							</span>
@@ -256,7 +256,7 @@
 								<span class="progress-bar border-primary"></span>
 							</span>
 							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">92<sup class="small">%</sup></div>
+								<div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
 							</div>
 						</div>
 						<!-- END -->
@@ -276,10 +276,10 @@
 
 				<div class="col-lg-4 mb-4">
 					<div class="bg-white rounded-lg shadow p-4">
-						<h2 class="h5 font-weight-bold text-center mb-4">.NETCore</h2>
+						<h2 class="h5 font-weight-bold text-center mb-4">.NET</h2>
 
 						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='83'>
+						<div class="progress mx-auto" data-value='80'>
 							<span class="progress-left">
 								<span class="progress-bar border-primary"></span>
 							</span>
@@ -287,7 +287,7 @@
 								<span class="progress-bar border-primary"></span>
 							</span>
 							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">83<sup class="small">%</sup></div>
+								<div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
 							</div>
 						</div>
 						<!-- END -->
@@ -310,7 +310,7 @@
 						<h2 class="h5 font-weight-bold text-center mb-4">SEO</h2>
 
 						<!-- Progress bar 1 -->
-						<div class="progress mx-auto" data-value='95'>
+						<div class="progress mx-auto" data-value='80'>
 							<span class="progress-left">
 								<span class="progress-bar border-primary"></span>
 							</span>
@@ -318,7 +318,7 @@
 								<span class="progress-bar border-primary"></span>
 							</span>
 							<div class="progress-value w-100 h-100 rounded-circle d-flex align-items-center justify-content-center">
-								<div class="h2 font-weight-bold">95<sup class="small">%</sup></div>
+								<div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
 							</div>
 						</div>
 						<!-- END -->
@@ -348,7 +348,7 @@
 					</div>
 				</div>
 				<div class="col-md-4 col-lg-4 d-flex align-items-end">
-					<img src="images/author.png" class="img-fluid" alt="">
+					<img src="" class="img-fluid" alt="">
 				</div>
 			</div>
 		</div>
@@ -359,7 +359,7 @@
 			<div class="row justify-content-center pb-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<span class="subheading">Accomplishments</span>
-					<h2 class="mb-4">Our Projects</h2>
+					<h2 class="mb-4">Projects</h2>
 				 </div>
 			</div>
 			<div class="row"> 
