--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<div class="text">
 								<span class="subheading">Hello! This is Aashish</span>
 								<h1 class="mb-4 mt-3"><span>Software Developer</span></h1>
-								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<p><a href="CV.pdf" class="btn btn-primary">Hire me</a> <a href="CV.pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 							</div>
 						</div>
 					</div>
@@ -70,7 +70,7 @@
 						<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 							<div class="text">
 								<h1 class="mb-4 mt-3">Hi, I am <span>Aashish</span></h1>
-								<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#Cv.pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								<p><a href="CV.pdf" class="btn btn-primary">Hire me</a><a href="CV.pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 							</div>
 						</div>
 					</div>
@@ -337,7 +337,6 @@
 				</div>
 			</div>
 		</div>
-	</section>
 	<section class="ftco-hireme">
 		<div class="container">
 			<div class="row justify-content-between">
