--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Name:</span> <span>Aashish Khatiwada</span></li>
 									<li class="d-flex"><span>Date of birth:</span> <span>January 28, 2001</span></li>
-									<li class="d-flex"><span>Address:</span> <span>Kathmandu</span></li>
+									<li class="d-flex"><span>Address:</span> <span>Santinagar,Kathmandu</span></li>
 									<li class="d-flex"><span>Zip code:</span> <span>44600</span></li>
 									<li class="d-flex"><span>Email:</span> <span>aashishkhatiwada0202@gmail.com</span></li>
 									<li class="d-flex"><span>Phone: </span> <span>+9779812386593</span></li>
@@ -551,11 +551,11 @@
 							<ul>
 								<li><span class="icon fa fa-map marker"></span><span class="text"> Santinagar,Kathmandu</span></li>
 								<li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+9779812386593</span></a></li>
-								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">info@yourdomain.com</span></a></li>
+								<li><a href="#"><span class="icon fa fa-paper-plane pr-4"></span><span class="text">info@aashishkhatiwada.com.np</span></a></li>
 							</ul>
 						</div>
 						<ul class="ftco-footer-social list-unstyled mt-2">
-							<li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
+							<li class="ftco-animate"><a href=""><span class="fa fa-twitter"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="fa fa-facebook"></span></a></li>
 							<li class="ftco-animate"><a href="#"><span class="fa fa-instagram"></span></a></li>
 						</ul>
@@ -565,9 +565,9 @@
 			<div class="row">
 				<div class="col-md-12 text-center">
 
-					<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-						<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+					<p>
+						Copyright &copy;<script>document.write(new Date().getFullYear());</script> Aashish Khatiwada.All rights reserved <i class="fa fa-heart" aria-hidden="true"></i> <a target="_blank"></a>
+					</p>
 					</div>
 				</div>
 			</div>
